--- a/pnr/pnr.plist
+++ b/pnr/pnr.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://server.touchutility.com/ota/pnr/PhoneNotesRecorderDev.ipa</string>
+					<string>https://uxap.github.io/ota/pnr/PhoneNotesRecorderDev.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,7 +19,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>https://server.touchutility.com/ota/pnr/PhoneNotesRecorder.png</string>
+					<string>https://uxap.github.io/ota/pnr/PhoneNotesRecorder.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
