--- a/pnr/v0.1.1-1.plist
+++ b/pnr/v0.1.1-1.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/uxap/ota-pnr/releases/download/v0.1.0-2/PhoneNotesRecorderDev.ipa</string>
+					<string>https://github.com/uxap/ota/releases/download/PhoneNotesRecorder-0.1.1-1/PhoneNotesRecorder.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -19,19 +19,19 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>https://uxap.github.io/ota-pnr/PhoneNotesRecorder.png</string>
+					<string>https://uxap.github.io/ota/pnr/PhoneNotesRecorder.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.uxap.PhoneNotesRecorder</string>
+				<string>com.touchutility.PhoneNotesRecorder</string>
 				<key>bundle-version</key>
-				<string>0.1.0 (1)</string>
+				<string>v0.1.1-1</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>PhoneNotes Recorder 0.1.0 (2)</string>
+				<string>PhoneNotes Recorder v0.1.1-1</string>
 			</dict>
 		</dict>
 	</array>
