--- a/pnr/v0.1.1-1.plist
+++ b/pnr/v0.1.1-1.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/uxap/ota/releases/download/PhoneNotesRecorder-0.1.1-1/PhoneNotesRecorder.ipa</string>
+					<string>https://github.com/uxap/ota/releases/download/PhoneNotesRecorder-0.1.1-1/PhoneNotesRecorderDev.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
