--- a/pnr/v1.2.0-34.plist
+++ b/pnr/v1.2.0-34.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/uxap/ota/releases/download/v1.2.0-33/PhoneNotesRecorderDev.ipa</string>
+					<string>https://github.com/uxap/ota/releases/download/v1.2.0-34/PhoneNotesRecorder.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,11 +27,11 @@
 				<key>bundle-identifier</key>
 				<string>com.uxap.PhoneNotesRecorder</string>
 				<key>bundle-version</key>
-				<string>v1.2.0-33</string>
+				<string>v1.2.0-34</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>PhoneNotes Recorder v1.2.0-33 Dev</string>
+				<string>PhoneNotes Recorder v1.2.0-34</string>
 			</dict>
 		</dict>
 	</array>
