--- a/onboard/v0.0.2-2.plist
+++ b/onboard/v0.0.2-2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/uxap/ota/releases/download/onboard-0.0.2-2/Onboard.ipa</string>
+					<string>https://github.com/uxap/ota/releases/download/onboard-0.0.2-2/Onboard-dev.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -27,11 +27,11 @@
 				<key>bundle-identifier</key>
 				<string>com.uxap.onboard</string>
 				<key>bundle-version</key>
-				<string>0.0.1-1</string>
+				<string>0.0.2-2</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>Onboard100 0.0.1-1</string>
+				<string>Onboard100 0.0.2-2</string>
 			</dict>
 		</dict>
 	</array>
