--- a/onboard/v0.0.3-3.plist
+++ b/onboard/v0.0.3-3.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/uxap/ota/releases/download/onboard-0.0.3-3/Onboard-dev.ipa</string>
+					<string>https://github.com/uxap/ota/releases/download/onboard-0.0.3-3/Onboard.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
